# basiccmake

./: CMakeLists.txt
demo/: CMakeLists.txt  demo.cc  demo_b.cc  demo_b.h
hello/: CMakeLists.txt  hello.cc  hello.h
